/*
 * @begin:license
 *
 * Copyright (c) 2015-2019, Benjamin Niemann <pink@odahoda.de>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 *
 * @end:license
 */

syntax = "proto2";

package noisicaa.pb;

import "noisicaa/model_base/model_base.proto";

message Proto {
  optional int32 a = 1;
  optional int32 b = 2;
}

message GrandChild {
}

message Child {
  optional uint64 child = 1;
  optional string value = 2;
}

message Root {
  optional string string_value = 1;
  optional int64 int_value = 2;
  optional float float_value = 3;
  optional bool bool_value = 4;
  repeated string string_list = 5;
  repeated int64 int_list = 6;
  repeated float float_list = 7;
  repeated bool bool_list = 8;

  optional Proto proto_value = 9;
  repeated Proto proto_list = 10;

  optional uint64 child_value = 11;
  repeated uint64 child_list = 12;
}

extend ObjectBase {
  optional Root root = 1000000;
  optional Child child = 1000001;
}
